# my_cmake_project

./: CMakeLists.txt  Jenkinsfile  arm-gcc-toolchain.cmake  linker.ld
src/: main.c
tests/: test_math.c
